--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ dev_dependencies:
 flutter:
  uses-material-design: true
  assets:
-   _images/
+   - images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
